<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/main">

    <TextView
        android:id="@+id/textView"
        android:layout_width="344dp"
        android:layout_height="205dp"
        android:background="@drawable/borde"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/training"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.484" />

    <Button
        android:id="@+id/training"
        android:layout_width="327dp"
        android:layout_height="55dp"
        android:background="@drawable/borde"
        android:text="@string/a_adir_entrenamiento"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.463"
        tools:ignore="TextContrastCheck,TextSizeCheck,VisualLintButtonSize" />

    <Button
        android:id="@+id/estadisticas"
        android:layout_width="317dp"
        android:layout_height="56dp"
        android:background="@drawable/borde"
        android:text="@string/mostrar_estadisticas"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/training"
        app:layout_constraintStart_toStartOf="@+id/training"
        app:layout_constraintTop_toBottomOf="@+id/training"
        app:layout_constraintVertical_bias="0.158"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/salir"
        android:layout_width="102dp"
        android:layout_height="51dp"
        android:background="@drawable/borde"
        android:text="@string/salir"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/estadisticas"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/estadisticas"
        app:layout_constraintTop_toBottomOf="@+id/estadisticas"
        app:layout_constraintVertical_bias="0.2"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/borde"
        android:text="TextView"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.193"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.155"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/altura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/borde"
        android:text="TextView"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.757"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.271"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/peso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/borde"
        android:text="TextView"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.757"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.155"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/edad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/borde"
        android:text="TextView"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.226"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.272"
        tools:ignore="HardcodedText" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="49dp"
        android:layout_height="49dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.784"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:layout_constraintVertical_bias="0.58"
        app:srcCompat="@drawable/altura"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="37dp"
        android:layout_height="35dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.188"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:layout_constraintVertical_bias="0.605"
        app:srcCompat="@drawable/calendar"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="40dp"
        android:layout_height="36dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.789"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:layout_constraintVertical_bias="0.076"
        app:srcCompat="@drawable/peso"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="37dp"
        android:layout_height="35dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.188"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:layout_constraintVertical_bias="0.082"
        app:srcCompat="@drawable/user"
        tools:ignore="ContentDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>